Hemingway Rewritten: Ensure header does not take up so much of the screen on mobile devices.
git-svn-id: https://wpcom-themes.svn.automattic.com/hemingway-rewritten@17332 d957f892-c61d-0410-b221-f235e6eecf30

--- a/style.css
+++ b/style.css
@@ -1468,6 +1468,9 @@ li > article.comment {
 		margin: 0 auto 40px;
 		width: 100%;
 	}
+	.site-header-image {
+		min-height: 0px;
+	}
 	.site-branding {
 		padding: 20px;
 	}
